php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #70875 Segmentation fault if wsdl has no targetNamespace attribute
Submitted: 2015-11-07 09:27 UTC Modified: -
From: mbeccati@php.net Assigned:
Status: Closed Package: SOAP related
PHP Version: 5.6Git-2015-11-07 (Git) OS: *
Private report: No CVE-ID: None
 [2015-11-07 09:27 UTC] mbeccati@php.net
Description:
------------
While debugging a SOAP issue I was experiencing, I was able to trigger a segmentation fault just by removing the targetNamespace from a WSDL file.

I'll shortly push a fix with a phpt.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-11-07 10:07 UTC] mbeccati@php.net
Automatic comment on behalf of mbeccati
Revision: http://git.php.net/?p=php-src.git;a=commit;h=fd61666d96277779b1b85f59a0651cb42eed3420
Log: Fix bug #70875 Segmentation fault if wsdl has no targetNamespace attribute
 [2015-11-07 10:07 UTC] mbeccati@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 20:00:02 2026 UTC