Fix bug #70875 Segmentation fault if wsdl has no targetNamespace attribute